retrieveUnpackaged/objects/Monitoring_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Individuals_on_Sex_Offender_Registry__c</fullName>
        <label>Individuals on Sex Offender Registry</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Labor_Union_Concurrence__c</fullName>
        <label>Labor Union Concurrence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ledger_Report_Attached__c</fullName>
        <label>Ledger Report Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_Attached_to_Monitoring_Record__c</fullName>
        <label>Letter Attached to Monitoring Record</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limited_English_Proficiency_Comments__c</fullName>
        <label>Limited English Proficiency Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limited_English_Proficiency__c</fullName>
        <label>Limited English Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Measurement_Tools_Comments__c</fullName>
        <label>Measurement Tools Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_Tools_to_gauge_results__c</fullName>
        <label>Measurement Tools to gauge results</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Additional_Activities_Comment__c</fullName>
        <label>Member - Additional Activities Comment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Safety_Safeguards__c</fullName>
        <label>Member Safety Safeguards</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Members_Additional_Activities__c</fullName>
        <label>Members - Additional Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Memorandum_of_Agreement__c</fullName>
        <label>Memorandum of Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missing_documentation__c</fullName>
        <label>Missing documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Completed_Date__c</fullName>
        <label>Monitoring Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monitoring_Visits__c</fullName>
        <label>Monitoring Visits</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_AmeriCorps_Recruitment_Listing__c</fullName>
        <label>My AmeriCorps Recruitment Listing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NGA_Program_Special_Reqmts_Met__c</fullName>
        <label>NGA Program Special Reqmts. Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NGA_Terms_Conditions_Comments__c</fullName>
        <label>NGA Terms &amp; Conditions Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGA_Terms_Conditions_Met__c</fullName>
        <label>NGA Terms &amp; Conditions Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSOPW_Check_Complete__c</fullName>
        <label>NSOPW Check Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Discrimination_Policies__c</fullName>
        <label>Non-Discrimination Policies</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Cash_Accounting_System__c</fullName>
        <label>Non-Federal Cash Accounting System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Supp_Dup_Disp_Restrictions__c</fullName>
        <label>Non-Supp./Dup./Disp. Restrictions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_federal_Support_Sponsor_s_Commitment__c</fullName>
        <label>Non-federal Support/Sponsor&apos;s Commitment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_federal_Support_Variance__c</fullName>
        <label>Non-federal Support Variance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nondiscrimination_Compliance__c</fullName>
        <label>Nondiscrimination Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Convicted_of_Murder_Self_Certifica__c</fullName>
        <label>Not Convicted of Murder Self-Certifica</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Convicted_of_Murder_Self_Certify__c</fullName>
        <label>Not Convicted of Murder Self Certify</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notice_of_Grant_Award__c</fullName>
        <label>Notice of Grant Award</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notification_Letter_Generated__c</fullName>
        <label>Notification Letter Generated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_target_to_meet_match__c</fullName>
        <label>On target to meet match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation_Training_Plan__c</fullName>
        <label>Orientation &amp; Training Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Authorizing_Certifying_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Authorizing Certifying Official</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Monitoring Plans (Other Authorizing Certifying Official)</relationshipLabel>
        <relationshipName>Monitoring_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Federal_Funds_Used__c</fullName>
        <label>Other Federal Funds Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Project_Staff__c</fullName>
        <label>Other Project Staff</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Based_Assign_Comments__c</fullName>
        <label>Outcome-Based Assign. Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Requirement_Comments__c</fullName>
        <label>PM Requirement Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Requirement_Compliance__c</fullName>
        <label>PM Requirement Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM_Results_Comments__c</fullName>
        <label>PM Results Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Processing_Function__c</fullName>
        <label>Payroll Processing Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payroll_Transact_Appropriately_Approv__c</fullName>
        <label>Payroll Transact. Appropriately Approv</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payroll_Transact_Supported__c</fullName>
        <label>Payroll Transact.  Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Fiscal_Reports__c</fullName>
        <label>Program &amp; Fiscal Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Officer_Notes__c</fullName>
        <label>Program Officer Notes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Operations_Comments__c</fullName>
        <label>Program Operations Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Operations_Unresolved_Problems__c</fullName>
        <label>Program Operations Unresolved Problems?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prohibited_activity_restriction_compli__c</fullName>
        <label>Prohibited activity restriction compli</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proj_Director_s_Perf_Comments__c</fullName>
        <label>Proj. Director&apos;s Perf. Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Director_s_Perf_Reviewed_Annual__c</fullName>
        <label>Proj. Director&apos;s Perf. Reviewed Annual</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proj_Director_s_Supervisor_Comments__c</fullName>
        <label>Proj. Director&apos;s Supervisor Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Director_s_Supervisor_Provide_Su__c</fullName>
        <label>Proj. Director&apos;s Supervisor Provide Su</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proj_Performance_System_Comments__c</fullName>
        <label>Proj. Performance System Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_performance_member_mgmt_sufferi__c</fullName>
        <label>Proj. performance/member mgmt. sufferi</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Activities_beyond_VISTA__c</fullName>
        <label>Project Activities beyond VISTA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Director_Concerns__c</fullName>
        <label>Project Director Concerns</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <label>Project Director</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Staff_Turnover__c</fullName>
        <label>Project Staff Turnover</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocols_Docs_for_Accompaniment__c</fullName>
        <label>Protocols &amp; Docs. for Accompaniment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_Function__c</fullName>
        <label>Purchasing Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Monitoring_Site_Visits_Attached__c</fullName>
        <label>QA &amp; Monitoring Site Visits Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_Check_for_Consecutive_Members__c</fullName>
        <label>Re-Check for Consecutive Members</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_Check_for_Members_w_Service_Break__c</fullName>
        <label>Re-Check for Members w/ Service Break</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recognize_National_Service_Comments__c</fullName>
        <label>Recognize National Service Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognize_National_Service_Contributio__c</fullName>
        <label>Recognize National Service Contributio</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recognized_in_Community_Comments__c</fullName>
        <label>Recognized in Community Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Retention_Function__c</fullName>
        <label>Record Retention Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_of_NSOPW_Search_Results_Date__c</fullName>
        <label>Record of NSOPW Search Results &amp; Date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recording_Rev_and_Expenditures_Functi__c</fullName>
        <label>Recording Rev. and Expenditures Functi</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Access_with_checks__c</fullName>
        <label>Recurring Access with checks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_access_to_vulnerable_populat__c</fullName>
        <label>Recurring access to vulnerable populat</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refusal_of_required_check__c</fullName>
        <label>Refusal of required check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relief_or_Remedial_Actions_taken__c</fullName>
        <label>Relief or Remedial Actions taken</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Corrective_Actions_Concerns_t__c</fullName>
        <label>Reported Corrective Actions/Concerns t</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_FFRs_Submitted_On_Time__c</fullName>
        <label>Required FFRs Submitted On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_PPRs_Submitted_On_Time__c</fullName>
        <label>Required PPRs Submitted On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restricted_Access_if_pending_check__c</fullName>
        <label>Restricted Access if pending check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Results_provided_to_Individual__c</fullName>
        <label>Results provided to Individual</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retain_NSOPW_State_s_FBI_Components__c</fullName>
        <label>Retain NSOPW, State(s), FBI Components</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Profile</label>
        <referenceTo>Risk_Profile__c</referenceTo>
        <relationshipLabel>Monitoring Plans</relationshipLabel>
        <relationshipName>Monitoring_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Separate_Acct_Codes_for_Grants__c</fullName>
        <label>Separate Acct. Codes for Grants</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Separation_of_Duties_Compliance__c</fullName>
        <label>Separation of Duties Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Recognized_in_Community__c</fullName>
        <label>Services Recognized in Community</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shift_from_Project_Plan_Goals_Commen__c</fullName>
        <label>Shift from Project Plan &amp; Goals Commen</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_from_Project_Plan_Goals__c</fullName>
        <label>Shift from Project Plan &amp; Goals</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Other_Federal_Funds__c</fullName>
        <label>Source of Other Federal Funds</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Monitoring Plans</relationshipLabel>
        <relationshipName>Monitoring_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Org_Partnership_Comments__c</fullName>
        <label>Sponsor - Org. Partnership Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Organization_Partnership__c</fullName>
        <label>Sponsor - Organization Partnership</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Verification_Forms__c</fullName>
        <label>Sponsor Verification Forms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_conducted_documented_checks__c</fullName>
        <label>Sponsor conducted &amp; documented checks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_s_External_Auditor__c</fullName>
        <label>Sponsor&apos;s External Auditor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_criminal_registry_search_conduct__c</fullName>
        <label>State criminal registry search conduct</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_approved_Travel_Voucher__c</fullName>
        <label>Supervisor approved Travel Voucher</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_of_Project_Director__c</fullName>
        <label>Supervisor of Project Director</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplement_Check_Covered_Positions__c</fullName>
        <label>Supplement Check-Covered Positions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>